--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "json-server": "^0.17.1",
+    "ngx-spinner": "^15.0.1",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
